--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-minimal
+title: Foundation of Bioinformatics Spring 2018 Yutian Li
+description: Yutian's class work portfolio
+logo: https://bioboot.github.io/bggn213_S18/assets/img/logo.png
